Media engine should not be told to prepare for playback if media loading is not allowed https://bugs.webkit.org/show_bug.cgi?id=83620

Reviewed by Dan Bernstein.

Source/WebCore:

Test: media/video-load-require-user-gesture.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::load): Early return if user gesture requirement is not met.

* testing/InternalSettings.cpp:
(WebCore::InternalSettings::setMediaPlaybackRequiresUserGesture): Moved the method here from
    Internals to be with the rest of the Internals methods that expose preferences.
* testing/InternalSettings.h:
* testing/InternalSettings.idl:

* testing/Internals.cpp: Moved setMediaPlaybackRequiresUserGesture to InternalSettings.
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* media/video-load-require-user-gesture-expected.txt: Added.
* media/video-load-require-user-gesture.html: Added.
* media/video-play-require-user-gesture.html: Update for move of setMediaPlaybackRequiresUserGesture
    from window.internals to window.internals.settings.


Canonical link: https://commits.webkit.org/101316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114021 268f45cc-cd09-0410-ab3c-d52691b4dbfc